Author name - removed unicode

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "license": "GPL-3",
     "authors": [
         {
-            "name": "Valentin Ivașcu",
+            "name": "Valentin Ivascu",
         }
     ],
     "require": {
