--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "illuminate/support": "5.4.*",
+        "illuminate/support": "5.4.*|5.5.*",
         "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "6.0.7",
-        "illuminate/database": "5.4.*",
-        "illuminate/events": "5.4.*"
+        "illuminate/database": "5.4.*|5.5.*",
+        "illuminate/events": "5.4.*|5.5.*"
     },
     "autoload": {
         "psr-4": {
