--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "6.0.7",
-        "illuminate/database": "5.4.*|5.5.*",
-        "illuminate/events": "5.4.*|5.5.*"
+        "illuminate/database": "5.4.*|5.5.*|5.6.*",
+        "illuminate/events": "5.4.*|5.5.*|5.6.*"
     },
     "autoload": {
         "psr-4": {
