--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "illuminate/support": "5.4.*|5.5.*",
+        "illuminate/support": "5.4.*|5.5.*|5.6.*",
         "doctrine/dbal": "^2.5"
     },
     "require-dev": {
