--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=5.5.9",
         "illuminate/support": ">=5.4",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5|^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "6.0.7",
